# fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: build-deploy.yml  build-deply.yml
alembic/: env.py
alembic/versions/: 0869686181af_create_users_table.py  81dad42d30ce_add_foreign_key_to_posts_table.py  da74712fd8a1_create_posts_table.py  e89f4df7cdf2_fkey_relations_and_add_votes_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  pyproject.toml
app/routers/: auth.py  posts.py  users.py  vote.py
tests/: conftest.py  test_posts.py  test_users.py  test_vote.py
